# swagger.json
@@ -73,6 +73,18 @@
             "description": "Created"
           }
         }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
       }
     },
     "/users/{userName}": {
